# cs2450-group-04

./: .gitignore  README.md  Test1 copy.txt  Test1.txt  Test1_6digit.txt  instructions_test.txt  pyproject.toml  pytest.toml
XML_files/: 6digit_too_large.txt  Test1_6digit.txt  Test2_6digit.txt
cs2450-group-04/: __init__.py  instruction_set.py
cs2450_group_04/: parser.py
docs/: Class Definition Documents.docx  README.md  gui.excalidraw
src/: boot.py  cpu.py  gui.py  io_handler.py  legacy.py  main.py  memory.py  random_instructions.py
tests/: cpu_test copy.txt  cpu_test.txt  cpu_test_6digit.txt  cpu_test_6digit_final.txt  cpu_test_final.txt  test_cli.py  test_cpu.py  test_io_handler.py  test_memory.py
