[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Micah Peltier <micah6_8@yahoo.com>", 
            "Quinton Grant", 
            "Stephen Laing", 
            "Shawn Crook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
termcolor = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
ruff = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 108

[tool.ruff.lint]
select = ["E", "F", "C", "D"]
ignore = [
    # Google Python Doc Style
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D401",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D417",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
    # Things that we should fix, but are too much work right now
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
